traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: ':' expected but ')' found.
  def colonne(y){
               ^TraversalByColumn:13: error: identifier expected but '}' found.
} 
^